--- a/src/App.css
+++ b/src/App.css
@@ -40,9 +40,9 @@
 .board {
   display: grid;
   grid-template-columns: repeat(6, 4em);
-  grid-template-rows: [header] 1em repeat(10, 3em);
+  grid-template-rows: [header] 1em repeat(10, 4em);
   /* grid-auto-rows: 3em; */
-  grid-gap: 0.5em;
+  /* grid-gap: 0.5em; */
 
   border: 1px solid red;
   /* display: flex; */
@@ -73,14 +73,14 @@
 
 .tile-wrapper {
   flex: 0; 
-  /* padding: 0.5em; */
+  padding: 0.2em;
 }
 
-.tile-wrapper.swapping-tile {
+.tile-wrapper.swapping-tile .tile {
   background-color: lightsalmon !important;
 }
 
-.board.swapping .tile-wrapper:hover {
+.board.swapping .tile-wrapper:hover .tile {
   background-color: lightgoldenrodyellow;
 }
 
@@ -89,10 +89,19 @@
   justify-content: center;
   align-items: center;
   font-weight: bold;
-  width: 3em;
-  height: 3em;
+  width: 100%;
+  height: 100%;
   border: 1px solid black;
   border-radius: 5px;
   box-shadow: 2px 2px 3px #aaa;
   user-select: none;
+}
+
+.tetromino {
+    filter: drop-shadow( 0px 0px 2px rgba(0, 0, 0, .7));
+    fill: blue;
+    /* stroke: black;
+    stroke-width: 0.1px; */
+    transform: scaleY(-1);
+    height: 100%;
 }
