--- a/src/App.css
+++ b/src/App.css
@@ -74,10 +74,19 @@
 .tile-wrapper {
   flex: 0;
   padding: 0.2em;
+  z-index: 2;
+}
+
+.tile-wrapper.tetromino {
+  z-index: 1;
 }
 
 .tile-wrapper.swapping-tile {
     z-index: 10;
+}
+
+.tile-wrapper.tetromino.swapping-tile {
+  z-index: 9;
 }
 
 .tile-wrapper.swapping-tile .tile {
@@ -112,14 +121,19 @@
     stroke-width: 0.1px; */
     transform: scaleY(-1);
     pointer-events: none;
+    /* width: 100%; */
+    /* height: 100%; */
+    /* max-height: 100%;
+    max-width: 100%; */
+    overflow: hidden;
 }
 
 .tetromino.wide {
-    width: 100%;
+    /* width: 100%; */
 }
 
 .tetromino.tall {
-    height: 100%;
+    /* height: 100%; */
 }
 
 .tetromino * {
