--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin: 1em;
 }
 
 .App-logo {
@@ -37,20 +38,19 @@
   }
 }
 
+.board-container {
+  display: inline-block;
+  margin: auto;
+  border: 3px solid maroon;
+  padding: 0.2em;
+}
+
 .board {
   display: grid;
-  grid-template-columns: repeat(6, 4em);
-  grid-template-rows: [header] 1em repeat(10, 4em);
+  /* grid-template-columns: repeat(6, 4em); */
+  /* grid-template-rows: [header] 1em repeat(10, 4em); */
   /* grid-auto-rows: 3em; */
   /* grid-gap: 0.5em; */
-
-  border: 1px solid red;
-  /* display: flex; */
-  /* flex-direction: column; */
-  margin: auto;
-  width: 18em;
-  /* height: 30em; */
-  /* justify-content: flex-end; */
 }
 
 .board .row {
@@ -86,7 +86,7 @@
 }
 
 .tile-wrapper.swapping-tile {
-    z-index: 10;
+  z-index: 10;
 }
 
 .tile-wrapper.tetromino.swapping-tile {
@@ -98,7 +98,7 @@
 }
 
 .tile-wrapper.swapping-tile .tetromino {
-    fill: lightsalmon;
+  fill: lightsalmon;
 }
 
 .board.swapping .tile-wrapper:hover .tile {
@@ -125,43 +125,80 @@
 }
 
 .tetromino {
-    filter: drop-shadow( 0px 0px 2px rgba(0, 0, 0, .7));
-    fill: blue;
-    /* stroke: black;
+  filter: drop-shadow( 0px 0px 2px rgba(0, 0, 0, .7));
+  fill: blue;
+  /* stroke: black;
     stroke-width: 0.1px; */
-    transform: scaleY(-1);
-    pointer-events: none;
-    /* width: 100%; */
-    /* height: 100%; */
-    /* max-height: 100%;
+  transform: scaleY(-1);
+  pointer-events: none;
+  /* width: 100%; */
+  /* height: 100%; */
+  /* max-height: 100%;
     max-width: 100%; */
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .tetromino.wide {
-    /* width: 100%; */
+  /* width: 100%; */
 }
 
 .tetromino.tall {
-    /* height: 100%; */
+  /* height: 100%; */
 }
 
 .tetromino * {
-    pointer-events: painted;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  width: 500px;
+  pointer-events: painted;
 }
 
 .tile-tray {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  padding: 0.5em;
 }
 
 .tile-tray .tile {
   height: 4em;
   width: 4em;
+  flex-shrink: 0;
+}
+
+.screen {
+  border: 3px solid #aaa;
+  padding: 1em;
+}
+
+.join-screen {
+
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+form.join {
+
+}
+
+label {
+  font-size: larger;
+  padding: 1em;
+}
+
+label input {
+  margin-left: 1em;
+}
+
+input[type=text] {
+  font-size: larger;
+}
+
+button {
+  padding: 0.5em;
+  font-size: larger;
+  font-variant: small-caps;
+  text-transform: uppercase;
 }
