--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   margin: 1em;
+  overflow: hidden;
 }
 
 h3 {
@@ -75,9 +76,32 @@ button {
   /* grid-gap: 0.5em; */
 }
 
+.action-message {
+  animation: slam 1 0.5s cubic-bezier(0.7, 1.8, 0.7, .75);
+  border-radius: 0.5em;
+  padding: 0.5em;
+  width: 15em;
+  border: 3px solid black;
+  text-align: center;
+}
+
+@keyframes slam {
+  from {
+    transform: scale(5) rotate(30deg);
+  }
+
+  to {
+    transform: scale(1) rotate(0);
+  }
+}
+
 /* Bananagrams mode */
 .pool {
   padding-bottom: 0.25em;
+}
+
+.bottom {
+  margin-top: 0.5em;
 }
 
 .tile-tray {
@@ -97,17 +121,25 @@ button {
   margin-right: 0.25em;
 }
 
+.countdown-container {
+  margin: 0.5em;
+}
+
 .countdown-clock {
+  background-color: black;
+  border-radius: 0.15em;
+  color: white;
+  display: inline-block;
   font-family: monospace;
   font-size: 30pt;
   font-weight: bold;
-  display: flex;
+  padding: 0.1em;
 
-  transition: color 0.5s linear;
+  transition: background-color 0.5s linear;
 }
 
 .countdown-clock.imminent {
-  color: crimson;
+  background-color: maroon;
 }
 
 /* Battleship mode boards */
@@ -120,6 +152,15 @@ button {
   border: 3px solid green;
 }
 
+.opponent.completed h2 {
+  text-decoration: line-through;
+  text-decoration-color: red;
+}
+
+.opponent .player-details {
+  padding-bottom: 0.5em;
+}
+
 .opponent .board {
   /* Board components are sized in ems to simplify scaling */
   font-size: x-small;
@@ -129,7 +170,7 @@ button {
   cursor: pointer;
 }
 
-.my-turn .opponent:not(.my-board) .tile-wrapper.blank:hover {
+.my-turn .opponent:not(.my-board):not(.completed) .tile-wrapper.blank:hover {
   border: 2px solid maroon;
 }
 
@@ -215,7 +256,7 @@ button {
   box-shadow: 2px 2px #ccc inset;
 }
 
-.tile-wrapper.selected {
+.tile-wrapper.selected .tile {
   background-color: lightblue;
 }
 
@@ -227,6 +268,11 @@ button {
   display: flex;
   flex-direction: row;
   margin: auto;
+}
+
+.launch-controls > * {
+  width: 50%;
+  margin: 0.5em;
 }
 
 .launch-controls button {
@@ -342,4 +388,8 @@ button {
   pointer-events: none;
 
   z-index: 10;
+}
+
+.player-name {
+  text-transform: capitalize;
 }
